add ejs, add original html5slides

--- a/public/slides.html
+++ b/public/slides.html
@@ -1,13 +1,13 @@
 <article>
   <h1>
-    Title Goes Here Up
+    WebSocket...
     <br>
-    To Two Lines
+    いったいなにができるの？
   </h1>
   <p>
-    Sergey Brin
+    M_Ishikawa
     <br>
-    May 10, 2011
+    2012-03-02
   </p>
 </article>
 
