add -save edit-

--- a/public/slides.html
+++ b/public/slides.html
@@ -1,5 +1,58 @@
 <article>
   <h1>
+    「僕の私の得意技」
+    <br>
+    　
+  </h1>
+  <p>
+    M_Ishikawa
+    <br>
+    2012-03-02
+  </p>
+</article>
+
+<article>
+  <h3>
+    M_Ishikawaの得意技
+  </h3>
+  <ul class="build">
+    <li>
+      音楽
+    </li>
+    <ul class="build">
+      <li>
+        楽器：Drums, Guitar, Bass, Perc, Tp, Tb, Vi, etc...
+      </li>
+      <li>
+        製作：Recording, Mixing(Cubase), Mastering(Wavelab), etc...
+      </li>
+    </ul>
+    <li>
+      その他
+    </li>
+    <ul class="build">
+      <li>
+        Dreamweaverでコード書く
+      </li>
+      <li>
+        Illustrator、Fireworks使い
+      </li>
+      <li>
+        起業して失敗した（NPO法人）
+      </li>
+      <li>
+        障害者ボランティア経験
+      </li>
+    </ul>
+  </ul>
+
+  <div class="build">
+    <strong>以上！</strong>
+  </div>
+</article>
+
+<article>
+  <h1>
     WebSocket...
     <br>
     いったいなにができるの？
