--- a/public/slides.html
+++ b/public/slides.html
@@ -46,8 +46,17 @@
     </ul>
   </ul>
 
+</article>
+
+<article>
+  <h1>
+    　以上<br />
+    「石川の得意技」でした。
+  </h1>
   <div class="build">
-    <strong>以上！</strong>
+    <p>
+      時間がまりましたので、引き続きまして
+    </p>
   </div>
 </article>
 
@@ -65,208 +74,54 @@
 </article>
 
 <article>
-  <p>
-    This is a slide with just text. This is a slide with just text.
-    This is a slide with just text. This is a slide with just text.
-    This is a slide with just text. This is a slide with just text.
-  </p>
-  <p>
-    There is more text just underneath.
-  </p>
-</article>
-
-<article>
   <h3>
-    Simple slide with header and text
+    WebSocketとは
   </h3>
   <p>
-    This is a slide with just text. This is a slide with just text.
-    This is a slide with just text. This is a slide with just text.
-    This is a slide with just text. This is a slide with just text.
+    HTML5のAPIのひとつです。<br />
   </p>
+  <small>
+    WebSocket, IndexedDB, FileAPI, などなどたくさん。<br />
+    (デブサミ2012で白石さんと発表してきました。)
+  </small>
   <p>
-    There is more text just underneath with a <code>code sample: 5px</code>.
+    &nbsp;
   </p>
-</article>
+  <iframe src='http://gori.me/it/14023'></iframe>
 
-<article class='smaller'>
-  <h3>
-    Simple slide with header and text (small font)
-  </h3>
-  <p>
-    This is a slide with just text. This is a slide with just text.
-    This is a slide with just text. This is a slide with just text.
-    This is a slide with just text. This is a slide with just text.
-  </p>
-  <p>
-    There is more text just underneath with a <code>code sample: 5px</code>.
-  </p>
-</article>
-
-<article>
-  <h3>
-    Slide with bullet points and a longer title, just because we
-    can make it longer
-  </h3>
-  <ul>
-    <li>
-      Use this template to create your presentation
-    </li>
-    <li>
-      Use the provided color palette, box and arrow graphics, and
-      chart styles
-    </li>
-    <li>
-      Instructions are provided to assist you in using this
-      presentation template effectively
-    </li>
-    <li>
-      At all times strive to maintain Google's corporate look and feel
-    </li>
-  </ul>
-</article>
-
-<article>
-  <h3>
-    Slide with bullet points that builds
-  </h3>
-  <ul class="build">
-    <li>
-      This is an example of a list
-    </li>
-    <li>
-      The list items fade in
-    </li>
-    <li>
-      Last one!
-    </li>
-  </ul>
-
-  <div class="build">
-    <p>Any element with child nodes can build.</p>
-    <p>It doesn't have to be a list.</p>
-  </div>
-</article>
-
-<article class='smaller'>
-  <h3>
-    Slide with bullet points (small font)
-  </h3>
-  <ul>
-    <li>
-      Use this template to create your presentation
-    <li>
-      Use the provided color palette, box and arrow graphics, and
-      chart styles
-    <li>
-      Instructions are provided to assist you in using this
-      presentation template effectively
-    <li>
-      At all times strive to maintain Google's corporate look and feel
-  </ul>
-</article>
-
-<article>
-  <h3>
-    Slide with a table
-  </h3>
-  <table>
-    <tr>
-      <th>
-        Name
-      <th>
-        Occupation
-    <tr>
-      <td>
-        Luke Mahe
-      <td>
-        V.P. of Keepin' It Real
-      <tr>
-        <td>
-          Marcin Wichary
-        <td>
-           The Michael Bay of Doodles
-  </table>
-</article>
-
-<article class='smaller'>
-  <h3>
-    Slide with a table (smaller text)
-  </h3>
-  <table>
-    <tr>
-      <th>
-        Name
-      <th>
-        Occupation
-    <tr>
-      <td>
-        Luke Mahe
-      <td>
-        V.P. of Keepin' It Real
-      <tr>
-        <td>
-          Marcin Wichary
-        <td>
-           The Michael Bay of Doodles
-  </table>
-</article>
-
-<article>
-  <h3>
-    Styles
-  </h3>
-  <ul>
-    <li>
-      <span class='red'>class="red"</span>
-    <li>
-      <span class='blue'>class="blue"</span>
-    <li>
-      <span class='green'>class="green"</span>
-    <li>
-      <span class='yellow'>class="yellow"</span>
-    <li>
-      <span class='black'>class="black"</span>
-    <li>
-      <span class='white'>class="white"</span>
-    <li>
-      <b>bold</b> and <i>italic</i>
-  </ul>
-</article>
-
-<article>
-  <h2>
-    Segue slide
-  </h2>
-</article>
-
-<article>
-  <h3>
-    Slide with an image
-  </h3>
-  <p>
-    <img style='height: 500px' src='/images/example-graph.png'>
-  </p>
-  <div class='source'>
-    Source: Sergey Brin
-  </div>
-</article>
-
-<article>
-  <h3>
-    Slide with an image (centered)
-  </h3>
-  <p>
-    <img class='centered' style='height: 500px' src='/images/example-graph.png'>
-  </p>
-  <div class='source'>
-    Source: Larry Page
-  </div>
 </article>
 
 <article class='fill'>
+  <iframe src='http://gori.me/it/14012'></iframe>
+</article>
+
+<article>
   <h3>
-    Image filling the slide (with optional header)
+    「ノンブロッキングI/O」を実現！<br />
+  </h3>
+  <small>
+    ノンブロッキングI/Oとは、データの送受信（I/O）が完了を待たずに、他の処理を開始する処理方式のことです。非同期で処理が並列に実行されるため、ある処理の完了を待って、次の処理を行いたい場合は、コールバックを使用する必要があります。
+  </small>
+
+  <section>
+    <pre>
+       io.set('transports', [
+           'websocket'
+         , 'flashsocket'
+         , 'htmlfile'
+         , 'xhr-polling'
+         , 'jsonp-polling'
+       ]);
+    </pre>
+  </section>
+</article>
+
+
+
+
+<article class='fill'>
+  <h3>
+    このプレゼンツール、<br />node.js+WebSocket(socket.io) でできてます。
   </h3>
   <p>
     <img src='/images/example-cat.jpg'>
@@ -277,98 +132,55 @@
 </article>
 
 <article>
-  <h3>
-    This slide has some code
-  </h3>
-  <section>
-    <pre>
-&lt;script type='text/javascript'&gt;
-  // Say hello world until the user starts questioning
-  // the meaningfulness of their existence.
-  function helloWorld(world) {
-    for (var i = 42; --i &gt;= 0;) {
-      alert('Hello ' + String(world));
-    }
-  }
-&lt;/script&gt;
-&lt;style&gt;
-  p { color: pink }
-  b { color: blue }
-  u { color: 'umber' }
-&lt;/style&gt;
-    </pre>
-  </section>
-</article>
-
-<article class='smaller'>
-  <h3>
-    This slide has some code (small font)
-  </h3>
-  <section>
-    <pre>
-&lt;script type='text/javascript'&gt;
-  // Say hello world until the user starts questioning
-  // the meaningfulness of their existence.
-  function helloWorld(world) {
-    for (var i = 42; --i &gt;= 0;) {
-      alert('Hello ' + String(world));
-    }
-  }
-&lt;/script&gt;
-&lt;style&gt;
-  p { color: pink }
-  b { color: blue }
-  u { color: 'umber' }
-&lt;/style&gt;
-    </pre>
-  </section>
-</article>
-
-<article>
-  <q>
-    The best way to predict the future is to invent it.
-  </q>
-  <div class='author'>
-    Alan Kay
-  </div>
-</article>
-
-<article class='smaller'>
-  <q>
-    A distributed system is one in which the failure of a computer 
-    you didn't even know existed can render your own computer unusable.
-  </q>
-  <div class='author'>
-    Leslie Lamport
-  </div>
-</article>
-
-<article class='nobackground'>
-  <h3>
-    A slide with an embed + title
-  </h3>
-  
-  <iframe src='http://www.google.com/doodle4google/history.html'></iframe>
-</article>
-
-<article class='nobackground'>
-  <iframe src='http://www.google.com/doodle4google/history.html'></iframe>
-</article>
-
-<article class='fill'>
-  <h3>
-    Full-slide embed with (optional) slide title on top
-  </h3>
-  <iframe src='http://www.google.com/doodle4google/history.html'></iframe>
-</article>
-
-<article>
-  <h3>
-    Thank you!
-  </h3>
-  
+  <h3>node.js</h3>
   <ul>
-    <li>
-      <a href='http://www.google.com'>google.com</a>
+  <li>express - MVCフレームワーク
+  <li>ejs - テンプレートエンジン
+  <li>socket.io - WebSocketを <u><strong>簡単に</strong></u> 扱う
+  <li>forever - デーモンに
+  <li>mongoose - mongoDB インタフェース
+  <li>mysql - mysql インタフェース
+  <li>http proxy - リバースプロキシ
   </ul>
+  etc...
+</article>
+
+<article>
+  さらに、このプレゼンツールは今回のLTのために作りましたが、実は
+  <h3 >HTML5 Slides</h3>
+  というGoogle性のオープンソースを改造しました。
+  <ul>
+    <li>ライブ編集機能！
+    <li>リモート機能！
+  </ul>
+  <h2>デモやるよ</h2>
+</article>
+
+
+<article>
+  エンジニアのSNS、GitHubにおいてます。
+</article>
+
+
+<article>
+  <q>
+    node.js楽しい
+  </q>
+  <q>
+    WebSocket楽しい
+  </q>
+  <q>
+    GitHub楽しい
+  </q>
+  <div class='author'>
+    Masayuki Ishikawa
+  </div>
+</article>
+
+
+<article>
+  <h2>
+    ご清聴ありがとうございました(・∀・)
+  </h2>
+  
 </article>
