mod slides.html

--- a/public/slides.html
+++ b/public/slides.html
@@ -1,5 +1,6 @@
 <article>
   <h1>
+    <div style="font-size:30px;margin:0px;padding:0px;">今回のテーマ</div>
     「僕の私の得意技」
     <br>
     　
@@ -102,8 +103,9 @@
   <small>
     ノンブロッキングI/Oとは、データの送受信（I/O）が完了を待たずに、他の処理を開始する処理方式のことです。非同期で処理が並列に実行されるため、ある処理の完了を待って、次の処理を行いたい場合は、コールバックを使用する必要があります。
   </small>
-
+  <p>&nbsp;</p>
   <section>
+    socket.ioの例
     <pre>
        io.set('transports', [
            'websocket'
@@ -158,11 +160,20 @@
 
 
 <article>
-  エンジニアのSNS、GitHubにおいてます。
+  <p>エンジニアのSNS、GitHubにおいてます。
+  <p><a href="https://github.com/ishikawam/html5slides">https://github.com/ishikawam/html5slides</a>
+  <p>&nbsp;
+  <p>閲覧は
+  <p><a href="http://osae.me:3000">http://osae.me:3000</a>
+  <p>編集は
+  <p><a href="http://osae.me:3000/edit.html">http://osae.me:3000/edit.html</a>
+  <p>リモートコントロールは
+  <p><a href="http://osae.me:3000/panel.html">http://osae.me:3000/panel.html</a>
 </article>
 
 
 <article>
+  結論
   <q>
     node.js楽しい
   </q>
@@ -180,7 +191,7 @@
 
 <article>
   <h2>
-    ご清聴ありがとうございました(・∀・)
+    以上、<br />ご清聴ありがとうございました(・∀・)
   </h2>
   
 </article>
