mod slides.html

--- a/public/slides.html
+++ b/public/slides.html
@@ -160,15 +160,15 @@
 
 
 <article>
-  <p>エンジニアのSNS、GitHubにおいてます。
+  <p>ソースはエンジニアのSNS、GitHubにおいてます。
   <p><a href="https://github.com/ishikawam/html5slides">https://github.com/ishikawam/html5slides</a>
   <p>&nbsp;
   <p>閲覧は
   <p><a href="http://osae.me:3000">http://osae.me:3000</a>
-  <p>編集は
-  <p><a href="http://osae.me:3000/edit.html">http://osae.me:3000/edit.html</a>
   <p>リモートコントロールは
   <p><a href="http://osae.me:3000/panel.html">http://osae.me:3000/panel.html</a>
+  <p>編集は
+  <p><a href="http://osae.me:3000/edit.html">http://osae.me:3000/edit.html</a>
 </article>
 
 
